mysite/cooklog/static/css/cooklog.css
h2 a {
    color: #B1654B;
}

body {
    margin-left: 0px;
    padding-left: 0px;
    background-color: #eef7fa; /*#d3d3d3;*/ /*FFFEEE;*/
    color: #B1654B;
    font-family: 'Merriweather', serif;
    padding-bottom: 0px;
}

footer {
    background-color: #ADD8E6; /*#99D1B7;*/
    padding-bottom: 0px;
    font-family: 'Merriweather', serif;
    padding: 10px 5px 10px 10px;
}

h5 {
    color: #000000; /*#F2D388;*/
    font-size: 18px;
}

a:link {
    color: #B1654B;
    font-family: 'Merriweather', serif;
}

a:visited {
    color: #B1654B;
    font-family:  'Merriweather', serif;
}

.page-body{
    margin-left: 10px;
}


.page-header {
    background-color: #ADD8E6; /*#99D1B7;*/
    margin-top: 0;
    padding: 0px 0px 0px 10px;
    height: 50px;
}

.page-header-title a {
    font-size: 36px;
    color: #B1654B;
    padding-left: 0px;
    font-family:  'Merriweather', serif;
    float: left;
    width: 180px;
}

.page-header-menu {
    font-size: 28px;
    color: #FDC08E;
    float: center;
    width: 320px;
}
.page-header-menu a {
    color: #F79273;
}

.page-header-menu-search {
    font-size: 28px;
    color: #F79273;
    float: left;
    width: 200px;
    margin-left: 20px;
}

.page-footer {
    font-size: 14px;
    padding-left: 30px;
    color: #F79273;
}

.page-menu {
    margin-left: 20px;
    padding-bottom: 10px;
    display: block;
    list-style: none;
}

/*
.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
    color: #C98474;
    font-size: 10pt;
    text-decoration: none;
    font-family:  'Merriweather', serif;
}
 */

.page-title {
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 5px;
    font-family: 'Merriweather', serif;
    color: #B1654B;
    font-size: 20px;
}

.page-subtitle {
    font-size: 16px;
    color: #ADD8E6; /*#99D1B7;*/
    padding-top: 20px;
    padding-left: 30px;
    padding-bottom: 20px;
    font-family:  'Merriweather', serif;
}


.dev {
    font-size: 10px;
    color: #000000;
    border: 1px solid;
    width: 25%;
    padding-left: 3px;
    padding-top: 3px;
}


.dish-mini {
    padding-left: 0px;
    margin-left: 10px;
    min-height: 110px;
    /*border: 4px solid #FDC08E;*/
    background: #f6fbfc;
    margin-bottom: 10px;
    width: 60%; /* mobile should be 100%!*/
}

.dish-mini-image-column {
    display: inline-block;
    width: 30%;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 10px;
}

.dish-mini-text-column {
    display: inline-block;
    margin-left: 10px;
}

.dish-mini-stars {
    font-size: 12px;
    padding-left: 0px;
    width: 75px;
    display: inline-block;
    color: #FDC08E;
}
.dish-mini-date-inline {
    color: #FDC08E;
    display: inline;
}
.dish-mini-dish-name {
    width: 300px;
    height: 50px;
    vertical-align: top;
}
.dish-mini-dish-name a{
    color: #B1654B;
}
.dish-mini-dish-chef-name a{
    color: #F79273;
}
.dish-mini-dish-chef-name {
    display: inline;
}

.dish-mini-recipe-icon {
    display: inline;
}

.dish-mini-recipe-icon img{
    margin-bottom: 2px;
}

.dish-mini-social-comments-and-likes {
    font-size: 10px;
    background: #eef7fa;
}

.dish-mini-single-comment {
    
}

.dish-mini-date {
    float: left;
    font-size: 12px;
    color: #FDC08E;
    width: 80px;
}

.dish-mini-date-long {
    float: left;
    font-size: 12px;
    color: #FDC08E;
    width: 100px;
    padding-top: 5px;
}

.dish-mini-date-extra-long {
    float: left;
    font-size: 12px;
    color: #FDC08E;
    width: 130px;
    padding-top: 5px;
}

.dish-mini-days-until {
    float: left;
    font-size: 12px;
    color: #FDC08E;
    width: 80px;
}

.dish-mini-chef {
    float: left;
    padding: 0 30px;
    width: 140px;
}

.dish-mini-chef a {
    font-size: 16px;
    color: #F79273;
}

.dish-mini-inner {
    font-size: 13px;
    padding: 0 30px;
    width: 450px;
    margin: 0px 0;
    float: left;
}

.dish-mini-inner-name {
    float: top;
    padding-top: 0px;
    font-size: 16px;
}

.dish-mini-inner-name a {
    color: #B1654B;
}

.dish-mini-inner-rating {
    float: top;
    padding-top: 5px;
}
.dish-mini-inner-recipe {
    float: top;
    padding-top: 5px;
    padding-bottom: 5px;
    font-size: 12px;
}
.dish-mini-inner-recipe a {
    color: #FDC08E;
}
.dish-mini-inner-method { /* used elsewhere than chef to-do??*/
    float: top;
    padding-top: 0px;
    font-size: 12px;
    color: #000000; /* or 008080? */
}

.dish-mini-image {
    font-size: 13px;
    padding: 0 0px;
    margin: 0px 0;
    float: left;
    width: 120px;
}
.dish-mini-edit {
    font-size: 12px;
}

.dish-brief {
    padding-left: 40px;
    min-height: 30px;
}

.dish-brief-inner {
    font-size: 13px;
    padding: 0 2px;
    width: 1200px;
    margin: 0px 0;
    float: left;
}

.dish-brief-inner-edit {
    font-size: 12px;
    float: left;
    padding-top: 5px;
    width: 30px;
}

.dish-brief-inner-name {
    float: left;
    padding-top: 0px;
    font-size: 16px;
    width: 450px;
    word-wrap: break-word;
}

.dish-brief-inner-name a {
    color: #F79273;
}

.dish-brief-inner-rating {
    float: left;
    padding-top: 5px;
    width: 100px;
}
.dish-brief-inner-recipe {
    float: left;
    padding-top: 5px;
    padding-bottom: 0px;
    font-size: 12px;
    width: 30px;
}
.dish-brief-inner-recipe a {
    color: #FDC08E;
}

.dish-album {
    width = 200px;
    margin-top: 5px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 5px;
    display: inline-block
}

.album-date {
    color: #FDC08E;
    display: inline;
}

.ingredient-album {
    width = 120px;
    margin-top: 10px;
    margin-left: 20px;
    margin-right: 10px;
    margin-bottom: 5px;
    display: inline-block
}

.dish-full-image-holder {
    
}

.dish-full-image img {
    height: 180px;
    object-fit: cover;
    border: #FDC08E 4px solid;
}

.album-photo img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 3px solid #FDC08E;
    margin-bottom: 2px;
}

.album-img-placeholder img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 3px solid #FDC08E;
    /*filter: grayscale(100%);*/
    margin-bottom: 2px;
}

.album-photo-ingredients img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #FDC08E;
    margin-bottom: 2px;
}

.album-img-ingredients-placeholder img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #FDC08E;
    filter: grayscale(100%);
    margin-bottom: 2px;
}

.album-stars {
    font-size: 12px;
    padding-left: 0px;
    width: 100px;
    display: inline-block
}

.album-dish-name {
    display: inline-block;
    width: 240px;
    height: 50px;
    vertical-align: top;
}
.album-dish-name a{
    color: #B1654B;
}
.album-dish-chef-name a{
    color: #F79273;
}
.album-dish-chef-name {
    
    display: inline;
}

.album-recipe-icon {
    display: inline;
}

.album-recipe-icon img{
    margin-bottom: 2px;
}

.album-ingredient-name {
    display: inline-block;
    width: 150px;
    height: 20px;
    vertical-align: bottom;
    font-size: 14px;
}

.crop img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #FDC08E;
}

.crop-image img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 3px solid #FDC08E;
}

.crop-placeholder img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 3px solid #FDC08E;
    margin-bottom: 2px;
    /*filter: grayscale(100%);*/
}

.page-text {
    font-size: 14px;
    padding-left: 40px;
    padding-bottom: 0px;
    color: #000000;
    padding-top: 10px;
}

.dish-full {
    padding-left: 40px;
    padding-bottom: 40px;
}

.dish-full-stars {
    padding-top: 10px;
    padding-bottom: 10px;
}

.dish-full-method {
    width: 600px;
}

.dish-full-method a {
    font-style: bold;
    color: #F79273;
}

.dish-full-chef-comments {
    width: 600px;
    padding-bottom: 10px;
}

.dish-full-subtitle {
    font-size: 12px;
    color: #ADD8E6; /*#99D1B7;*/
    padding-top: 12px;
    margin-left: -10px;
    padding-bottom: 5px;
    font-family:  'Merriweather', serif;
}

.dish-social-comments-and-likes {
    border: 4px solid #FDC08E;
    margin-left: -20px;
    margin-top: 20px;
    margin-bottom: 20px;
    width: 500px;
    padding-bottom: 10px;
    font-size: 12px;
}

.dish-full-comments {
    font-size: 12px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 0px;
}

.dish-full-no-comments {
    font-size: 12px;
    font-style: italic;
    margin-bottom: 5px;
    margin-top: 5px;
}

.dish-likes {
    padding-left: 10px;
}

.dish-button-add-comment {
    margin-left: 10px;
    margin-bottom: 20px;
    width: 90px;
    font-size: 10px;
}

.dish-button-add-like {
    margin-left: 20px;
    background: #FDC08E;
    width: 80px;
}

.dish-full-likes {
    font-size: 12px;
}



.dish-full-no-likes {
    font-size: 12px;
    font-style: italic;
    
    margin-top: 5px;
    padding-left: 10px;
    padding-bottom: 10px;
}


.dish-full-days-until {
    padding-top: 20px;
    padding-bottom: 20px;
}
.dish-full-query-status {
    padding-bottom: 20px;
}

.dish-empty {
    padding-left: 40px;
    padding-bottom: 20px;
}

.dish-entry-form {
    padding-left: 40px;
    padding-bottom: 40px;
}


.content {
    margin-left: 40px;
}

h1, h2 {
    padding-left: 10px;
    font-family:  'Merriweather', serif;
    color: #B1654B;
}

h3 {
    font-family: 'Merriweather', serif;
    color: #B1654B;
}

h4 {
    font-family:  'Merriweather', serif;
    color: #ADD8E6; /*#99D1B7;*/
}


.date {
    color: #A7D2CB;
}

.save {
    float: right;
}

.post-form textarea, .post-form input {
    width: 100%;
}

.top-menu, .top-menu:hover, .top-menu:visited {
    color: #B1654B;
    float: right;
    font-size: 10pt;
    margin-right: 15px;
}

.dish {
    margin-bottom: 4px;
    color: #B1654B;
}

.dish h1 a, .dish h1 a:visited {
    color: #B1654B;
}







/* Dropdown Button */
.dropbtn {
    background-color: #ADD8E6; /*#99D1B7;*/
    color: white;
    padding: 2px;
    font-size: 28px;
    border: none;
    cursor: pointer;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    font-size: 14px;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #F2D388}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
    background-color: #F2D388 ;
}

